# Fundamental-Invariant-Generator

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: cal_err.f90  fundamental.f90  gen_poly.f90  modules.F90  rey_molecule.f90  sym_poly.f90  write_poly.f90
utils/: dat_polys2json.py
